inport data picture

--- a/public/template/frontend/css/color16.css
+++ b/public/template/frontend/css/color16.css
@@ -1,5 +1,8 @@
 :root {
-  --theme-deafult: #5fcbc4; }
+  /* --theme-deafult: #5fcbc4;  */
+  /* --theme-deafult: #ff9e3e; */
+  --theme-deafult: #ffad5c;
+}
 
 /*-----------------------------------------------------------------------------------
 
