--- a/public/template/frontend/order-history.html
+++ b/public/template/frontend/order-history.html
@@ -145,7 +145,7 @@
             </div>
         </div>
     </div>
-    
+
     <section class="faq-section section-b-space">
         <div class="container">
             <div class="row">
@@ -174,13 +174,14 @@
                             <div class="card">
                                 <div class="card-header">
                                     <h5 class="mb-0">
-                                        <button style="text-transform: none;" class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#rIgdYJf">Mã đơn hàng:
+                                        <button style="text-transform: none;" class="btn btn-link collapsed"
+                                            type="button" data-toggle="collapse" data-target="#rIgdYJf">Mã đơn hàng:
                                             rIgdYJf</button>&nbsp;&nbsp;Thời gian: 03/09/2020 10:07:21</h5>
                                 </div>
                                 <div id="rIgdYJf" class="collapse" data-parent="#accordionExample" style="">
                                     <div class="card-body table-responsive">
                                         <table class="table btn-table">
-    
+
                                             <thead>
                                                 <tr>
                                                     <td>Hình ảnh</td>
@@ -190,9 +191,9 @@
                                                     <td>Thành tiền</td>
                                                 </tr>
                                             </thead>
-    
+
                                             <tbody>
-    
+
                                                 <tr>
                                                     <td><a href="#"><img src="images/product.jpg"
                                                                 alt="Kiến Trúc Hướng Dòng Thông Gió Tự Nhiên (Tái Bản)"
@@ -215,17 +216,18 @@
                                     </div>
                                 </div>
                             </div>
-    
+
                             <div class="card">
                                 <div class="card-header">
-                                    <h5 class="mb-0"><button style="text-transform: none;" class="btn btn-link collapsed"
-                                            type="button" data-toggle="collapse" data-target="#Kv4z8GH">Mã đơn hàng:
+                                    <h5 class="mb-0"><button style="text-transform: none;"
+                                            class="btn btn-link collapsed" type="button" data-toggle="collapse"
+                                            data-target="#Kv4z8GH">Mã đơn hàng:
                                             Kv4z8GH</button>&nbsp;&nbsp;Thời gian: 30/08/2020 21:56:20</h5>
                                 </div>
                                 <div id="Kv4z8GH" class="collapse" data-parent="#accordionExample" style="">
                                     <div class="card-body table-responsive">
                                         <table class="table btn-table">
-    
+
                                             <thead>
                                                 <tr>
                                                     <td>Hình ảnh</td>
@@ -235,34 +237,37 @@
                                                     <td>Thành tiền</td>
                                                 </tr>
                                             </thead>
-    
+
                                             <tbody>
-    
+
                                                 <tr>
                                                     <td><a href="#"><img src="images/product.jpg"
                                                                 alt="Giáo Trình Hán Ngữ 1 - Tập 1 - Quyển Thượng (Phiên Bản Mới)"
                                                                 style="width: 80px"></a></td>
-                                                    <td style="min-width: 200px">Giáo Trình Hán Ngữ 1 - Tập 1 - Quyển Thượng
+                                                    <td style="min-width: 200px">Giáo Trình Hán Ngữ 1 - Tập 1 - Quyển
+                                                        Thượng
                                                         (Phiên Bản Mới)</td>
                                                     <td style="min-width: 100px">53,400 đ</td>
                                                     <td>1</td>
                                                     <td style="min-width: 150px">53,400 đ</td>
                                                 </tr>
-    
+
                                                 <tr>
                                                     <td><a href="#"><img src="images/product.jpg"
                                                                 alt="Giải Thích Ngữ Pháp Tiếng Anh (Bài Tập Và Đáp Án)"
                                                                 style="width: 80px"></a></td>
-                                                    <td style="min-width: 200px">Giải Thích Ngữ Pháp Tiếng Anh (Bài Tập Và
+                                                    <td style="min-width: 200px">Giải Thích Ngữ Pháp Tiếng Anh (Bài Tập
+                                                        Và
                                                         Đáp Án)</td>
                                                     <td style="min-width: 100px">139,500 đ</td>
                                                     <td>1</td>
                                                     <td style="min-width: 150px">139,500 đ</td>
                                                 </tr>
-    
+
                                                 <tr>
                                                     <td><a href="#"><img src="images/product.jpg"
-                                                                alt="Hackers Ielts: Writing" style="width: 80px"></a></td>
+                                                                alt="Hackers Ielts: Writing" style="width: 80px"></a>
+                                                    </td>
                                                     <td style="min-width: 200px">Hackers Ielts: Writing</td>
                                                     <td style="min-width: 100px">162,520 đ</td>
                                                     <td>1</td>
@@ -280,17 +285,18 @@
                                     </div>
                                 </div>
                             </div>
-    
+
                             <div class="card">
                                 <div class="card-header">
-                                    <h5 class="mb-0"><button style="text-transform: none;" class="btn btn-link collapsed"
-                                            type="button" data-toggle="collapse" data-target="#kqxfDul">Mã đơn hàng:
+                                    <h5 class="mb-0"><button style="text-transform: none;"
+                                            class="btn btn-link collapsed" type="button" data-toggle="collapse"
+                                            data-target="#kqxfDul">Mã đơn hàng:
                                             kqxfDul</button>&nbsp;&nbsp;Thời gian: 30/08/2020 21:20:14</h5>
                                 </div>
                                 <div id="kqxfDul" class="collapse" data-parent="#accordionExample" style="">
                                     <div class="card-body table-responsive">
                                         <table class="table btn-table">
-    
+
                                             <thead>
                                                 <tr>
                                                     <td>Hình ảnh</td>
@@ -300,20 +306,21 @@
                                                     <td>Thành tiền</td>
                                                 </tr>
                                             </thead>
-    
+
                                             <tbody>
-    
+
                                                 <tr>
                                                     <td><a href="#"><img src="images/product.jpg"
                                                                 alt="Giáo Trình Kỹ Thuật Lập Trình C Căn Bản Và Nâng Cao"
                                                                 style="width: 80px"></a></td>
-                                                    <td style="min-width: 200px">Giáo Trình Kỹ Thuật Lập Trình C Căn Bản Và
+                                                    <td style="min-width: 200px">Giáo Trình Kỹ Thuật Lập Trình C Căn Bản
+                                                        Và
                                                         Nâng Cao</td>
                                                     <td style="min-width: 100px">101,250 đ</td>
                                                     <td>1</td>
                                                     <td style="min-width: 150px">101,250 đ</td>
                                                 </tr>
-    
+
                                                 <tr>
                                                     <td><a href="#"><img src="images/product.jpg"
                                                                 alt="Kiến Trúc Hướng Dòng Thông Gió Tự Nhiên (Tái Bản)"
@@ -324,10 +331,11 @@
                                                     <td>1</td>
                                                     <td style="min-width: 150px">70,550 đ</td>
                                                 </tr>
-    
+
                                                 <tr>
                                                     <td><a href="#"><img src="images/product.jpg"
-                                                                alt="Cẩm Nang Cấu Trúc Tiếng Anh" style="width: 80px"></a>
+                                                                alt="Cẩm Nang Cấu Trúc Tiếng Anh"
+                                                                style="width: 80px"></a>
                                                     </td>
                                                     <td style="min-width: 200px">Cẩm Nang Cấu Trúc Tiếng Anh</td>
                                                     <td style="min-width: 100px">48,020 đ</td>
