Frontend::edit line

--- a/public/template/frontend/css/phone-ring.css
+++ b/public/template/frontend/css/phone-ring.css
@@ -160,13 +160,15 @@
 
 .phonering-alo-phone.phonering-alo-green.phonering-alo-hover .phonering-alo-ph-img-circle,
 .phonering-alo-phone.phonering-alo-green:hover .phonering-alo-ph-img-circle {
-    background-color: #75eb50;
-    background-color: #75eb50 9;
+    /* background-color: #75eb50;
+    background-color: #75eb50 9; */
+    background-color: #00aff2;
 }
 
 .phonering-alo-phone.phonering-alo-green .phonering-alo-ph-img-circle {
-    background-color: #00aff2;
-    background-color: #00aff2 9;
+    /* background-color: #00aff2;
+    background-color: #00aff2 9; */
+    background-color: #ff9e3e;
 }
 
 .phonering-alo-phone.phonering-alo-gray.phonering-alo-hover .phonering-alo-ph-img-circle,
